# SnowBreak-MOD-manager

./: .gitignore  7.0  License  MANIFEST.in  PAK通用MOD管理柒.spec  README-CN.md  README.md  README_EN.md  build.ps1  build2.ps1  config.py  file_version_info.txt  i18n.py  mod_manager.config.json  mod_manager.py  mod_manager.spec  models.py  nuitka-crash-report.xml  pyproject.toml  qt.conf  refactor_ui.py  setup.ps1  transfer_helpers.py  ui.py  utils.py  version_info.txt  workers.py  尘白禁区MOD管理柒.spec
nuitka-src/Nuitka-main/: .cursorrules  AGENTS.md  MANIFEST.in  setup.py
nuitka-src/Nuitka-main/.agent/workflows/: create-mre.md  reproduce-macos-python-flavors.md
nuitka-src/Nuitka-main/debian/: changelog
nuitka-src/Nuitka-main/doc/: nuitka.1
nuitka-src/Nuitka-main/nuitka/: Bytecodes.py  HardImportRegistry.py  MainControl.py  PythonFlavors.py  PythonVersions.py  Version.py
nuitka-src/Nuitka-main/nuitka/code_generation/: CallCodes.py  CodeGeneration.py  ImportCodes.py  LoaderCodes.py  ModuleCodes.py
nuitka-src/Nuitka-main/nuitka/format/: FileFormatting.py
nuitka-src/Nuitka-main/nuitka/freezer/: DllDependenciesMacOS.py  Onefile.py  Standalone.py
nuitka-src/Nuitka-main/nuitka/importing/: FakeModules.py  Importing.py  ImportingResults.py  Recursion.py
nuitka-src/Nuitka-main/nuitka/nodes/: LocalsDictNodes.py  LoopNodes.py  ModuleAttributeNodes.py  VariableAssignNodes.py
nuitka-src/Nuitka-main/nuitka/options/: OptionParsing.py  Options.py  UvBuild.py
nuitka-src/Nuitka-main/nuitka/plugins/: Hooks.py  PluginBase.py  Plugins.py
(+53 files in other folders)
